2012-03-22  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/std/array (array<>::at(size_type) const): Fix version
	for undefined __EXCEPTIONS.

2012-03-22  Release Manager

	* GCC 4.7.0 released.

2012-03-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR libstdc++/52456
	* config/abi/post/hppa-linux-gnu/baseline_symbols.txt: Update.

2012-03-09  Andreas Schwab  <schwab@linux-m68k.org>

	* config/locale/gnu/monetary_members.cc
	(moneypunct<char,true>::_M_initialize_moneypunct): Throw caught
	exception again.
	(moneypunct<char,false>::_M_initialize_moneypunct): Likewise.
	* testsuite/22_locale/locale/cons/12352.cc: Also test en_US
	locale.

2012-03-02  Benjamin Kosnik  <bkoz@redhat.com>

	* include/c_global/cstdio: Remove extraneous extern.
	* include/c_std/cstdio: Same.

2012-03-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/abi/post/solaris2.8/baseline_symbols.txt: Regenerate.
	* config/abi/post/solaris2.8/sparcv9/baseline_symbols.txt: Likewise.
	* config/abi/post/solaris2.10/baseline_symbols.txt: Likewise.
	* config/abi/post/solaris2.10/amd64/baseline_symbols.txt: Likewise.
	* config/abi/post/solaris2.10/sparcv9/baseline_symbols.txt: Likewise.

2012-03-01  Benjamin Kosnik  <bkoz@redhat.com>
            Ramana Radhakrishnan <ramana@gcc.gnu.org>

	PR libstdc++/51785
	* acinclude.m4 (GLIBCXX_CHECK_STDIO_PROTO): New.
	* configure.ac: Call it.
	* configure: Regenerate.
	* config.h.in: Same.
	* config/os/gnu-linux/os_defines.h: Conditionally undefine
	_GLIBCXX_HAVE_GETS.
	* include/c_global/cstdio: Conditionally declare deprecated gets.
	* include/c_std/cstdio: Same.

2012-03-01  Michael Spertus  <mike_spertus@symantec.com>

	* include/tr2/type_traits (typelist): To __reflection_typelist.
	(first, rest, empty): Remove.

2012-03-01  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/Makefile.am (CLEANFILES): Add *.gdb.
	* testsuite/Makefile.in: Regenerate.

2012-02-29  H.J. Lu  <hongjiu.lu@intel.com>
