@@ -1,3 +1,10 @@
+2012-03-22  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	PR libstdc++/52433
+	* include/debug/safe_iterator.h (_Safe_iterator): Add move
+	constructor and move assignment operator.
+	* testsuite/23_containers/vector/debug/52433.cc: New.
+
 2012-03-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/std/array (array<>::at(size_type) const): Fix version
